--- a/week_03/04-web-scraping.ipynb
+++ b/week_03/04-web-scraping.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "intended-controversy",
    "metadata": {
     "toc": true
    },
@@ -13,7 +12,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "buried-palestinian",
    "metadata": {},
    "source": [
     "# Web Scraping"
@@ -21,7 +19,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unable-recall",
    "metadata": {},
    "source": [
     "![legtsgo](https://media.giphy.com/media/dwmNhd5H7YAz6/giphy.gif)"
@@ -29,7 +26,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "popular-estate",
    "metadata": {},
    "source": [
     "## Repaso HTML\n",
@@ -51,7 +47,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "immediate-deficit",
    "metadata": {},
    "source": [
     "### Tags\n",
@@ -67,7 +62,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "behavioral-plate",
    "metadata": {},
    "source": [
     "### Attributes\n",
@@ -90,7 +84,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "strong-proof",
    "metadata": {},
    "source": [
     "## Beautitul soup\n",
@@ -104,7 +97,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prescribed-practitioner",
    "metadata": {},
    "source": [
     "### Hacer scraping de los elementos HTML usando la clase Attribute\n",
@@ -114,7 +106,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "substantial-consumption",
    "metadata": {},
    "source": [
     "```python\n",
@@ -124,7 +115,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "recognized-steel",
    "metadata": {},
    "source": [
     "Podemos usar una estructura for para iterar sobre ellos y hacer lo que sea con cada uno."
@@ -132,20 +122,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "favorite-westminster",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "url = \"https://www.python.org/\"\n",
     "html = requests.get(url)\n",
-    "res = BeautifulSoup(html.content,\"html.parser\")"
+    "soup = BeautifulSoup(html.content,\"html.parser\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "valuable-instrument",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<h2 class=\"widget-title\"><span aria-hidden=\"true\" class=\"icon-get-started\"></span>Get Started</h2>,\n",
+       " <h2 class=\"widget-title\"><span aria-hidden=\"true\" class=\"icon-download\"></span>Download</h2>,\n",
+       " <h2 class=\"widget-title\"><span aria-hidden=\"true\" class=\"icon-documentation\"></span>Docs</h2>,\n",
+       " <h2 class=\"widget-title\"><span aria-hidden=\"true\" class=\"icon-jobs\"></span>Jobs</h2>,\n",
+       " <h2 class=\"widget-title\"><span aria-hidden=\"true\" class=\"icon-news\"></span>Latest News</h2>,\n",
+       " <h2 class=\"widget-title\"><span aria-hidden=\"true\" class=\"icon-calendar\"></span>Upcoming Events</h2>,\n",
+       " <h2 class=\"widget-title\"><span aria-hidden=\"true\" class=\"icon-success-stories\"></span>Success Stories</h2>,\n",
+       " <h2 class=\"widget-title\"><span aria-hidden=\"true\" class=\"icon-python\"></span>Use Python for…</h2>,\n",
+       " <h2 class=\"widget-title\">\n",
+       " <span class=\"prompt\">&gt;&gt;&gt;</span> <a href=\"/dev/peps/\">Python Enhancement Proposals<span class=\"say-no-more\"> (PEPs)</span></a>: The future of Python<span class=\"say-no-more\"> is discussed here.</span>\n",
+       " <a aria-hidden=\"true\" class=\"rss-link\" href=\"/dev/peps/peps.rss\"><span class=\"icon-feed\"></span> RSS</a>\n",
+       " </h2>,\n",
+       " <h2 class=\"widget-title\">\n",
+       " <span class=\"prompt\">&gt;&gt;&gt;</span> <a href=\"/psf/\">Python Software Foundation</a>\n",
+       " </h2>]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tags = soup.findAll(\"h2\", {\"class\": \"widget-title\"})\n",
+    "tags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(tags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -171,14 +214,13 @@
     }
    ],
    "source": [
-    "tags = res.findAll(\"h2\", {\"class\": \"widget-title\"})\n",
+    "tags = soup.findAll(\"h2\", {\"class\": \"widget-title\"})\n",
     "for tag in tags:\n",
     "    print(tag.getText())"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "christian-starter",
    "metadata": {},
    "source": [
     "Usamos la función getText para imprimir solo el contenido interno de la etiqueta, pero si no usaste getText, terminarás con las etiquetas incluido todo lo que haya dentro de ellas."
@@ -186,7 +228,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eight-mention",
    "metadata": {},
    "source": [
     "### Obtener las etiquetas HTML usando findAll\n",
@@ -197,18 +238,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "accompanied-performance",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Este código obtiene todas las etiquetas span, a e img del código HTML descargado.\n",
-    "tags = res.findAll(\"span\", \"a\" \"img\")"
+    "tags = soup.findAll(\"span\", \"a\" \"img\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "clear-taste",
    "metadata": {},
    "source": [
     "Además, puedes extraer etiquetas que tengan estas clases:"
@@ -216,17 +255,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "agreed-polyester",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tags = res.findAll(\"a\", {\"class\": [\"url\", \"readmorebtn\"]})"
+    "tags = soup.findAll(\"a\", {\"class\": [\"url\", \"readmorebtn\"]})"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "combined-correspondence",
    "metadata": {},
    "source": [
     "Este código extrae todas las etiquetas a que tienen las clases readmorebtn y url.     \n",
@@ -235,17 +272,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "extraordinary-compound",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tags = res.findAll(text=\"Python Programming Basics with Examples\")"
+    "tags = soup.findAll(text=\"Python Programming Basics with Examples\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "duplicate-water",
    "metadata": {},
    "source": [
     "La función findAll devuelve todos los elementos que coinciden con los atributos especificados, pero si deseas devolver un solo elemento, puedes usar el parámetro limit o usar la función find que solo devuelve el primer elemento."
@@ -253,7 +288,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "frank-thunder",
    "metadata": {},
    "source": [
     "### Buscar el enésimo hijo usando Beautiful Soup\n",
@@ -262,17 +296,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "hollow-timing",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tags = res.span.findAll(\"a\")"
+    "tags = soup.span.findAll(\"a\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "painful-reasoning",
    "metadata": {},
    "source": [
     "Esta línea obtendrá el primer elemento span en el objeto Beautiful Soup y luego obtendrá todos los elementos a en ese span.\n",
@@ -289,7 +321,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ordinary-hardware",
    "metadata": {},
    "source": [
     "## Diferencia entre find_all() y select()"
@@ -297,7 +328,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nutritional-senate",
    "metadata": {},
    "source": [
     "#### Find_all\n",
@@ -307,7 +337,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fresh-purse",
    "metadata": {},
    "source": [
     "#### Select\n",
@@ -321,7 +350,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "steady-madagascar",
    "metadata": {},
    "source": [
     "## Manos a la obra"
@@ -329,7 +357,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "front-majority",
    "metadata": {},
    "source": [
     "### Ejemplo 1 Página de zapatillas de deporte"
@@ -337,7 +364,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "timely-nowhere",
    "metadata": {},
    "source": [
     "Recuerda que tienes que instalar la librería beautifulsoup    "
@@ -346,7 +372,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "municipal-swedish",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,8 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "professional-appreciation",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,8 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "demonstrated-project",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,74 +399,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "broken-colombia",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"https://www.murallasport.com/29-zapatillas-moda-mujer\""
+    "url = \"https://www.murallasport.com/29-zapatillas-moda-mujer\"\n",
+    "html = requests.get(url)\n",
+    "soup = BeautifulSoup(html.content,\"html.parser\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "built-observation",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nombres = soup.find_all('div', {'class': 'name_product_box'})"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "checked-delaware",
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nZapatilla Mujer  Converse Lift  Hi Top  Beige\\n'"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nombres[0].getText()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "bizarre-zoning",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nombres[0].getText().strip()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "interim-stephen",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lista_nombres = [a.getText().strip() for a in nombres]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "consistent-morrison",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "express-embassy",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "dressed-humanitarian",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Zapatilla Mujer  Converse Lift  Hi Top  Beige',\n",
+       " 'Zapatillas Mujer  Reebok Legacy 83  Verde',\n",
+       " 'Zapatilla Adidas Mujer Courtphase Blanco',\n",
+       " 'Zapatilla Nike Court Legacy Blanco',\n",
+       " 'Zapatilla Mujer Nike Air Max Excee Blanco',\n",
+       " 'Zapatilla Mujer New Balance 237  Multicolor',\n",
+       " 'Zapatilla New Balance 237 Multicolor',\n",
+       " 'Zapatilla Mujer Converse Move Hi Negro',\n",
+       " 'Zapatilla Mujer Converse Move Hi Top Blanca',\n",
+       " 'Zapatilla Mujer Skechers Bobs Squad Celeste',\n",
+       " 'Zapatilla Mujer Skechers Bobs Squad Gris',\n",
+       " 'Zapatilla Mujer Skechers Bobs Flex Blanco',\n",
+       " 'Zapatilla Mujer Skechers Bobs Flex Negro',\n",
+       " 'Zapatilla Mujer Skechers Ultraflex Marino',\n",
+       " 'Zapatilla Mujer Skechers Ultra Flex 2.0 Negro',\n",
+       " 'Zapatilla Mujer Skechers Skech-Air Dynamight Azul',\n",
+       " 'Zapatilla Skechers Flex Advantage 2.0 Negro',\n",
+       " 'Zapatilla Skechers Ultra Groove Azul',\n",
+       " 'Zapatilla UNISEX Vans  CHECKERBOARD OLD SKOOL S...',\n",
+       " 'Zapatilla Vans TIE DYE COMFYCUSH AUTHENTIC Mult...',\n",
+       " 'Zapatilla  Vans Old Skool   Blanca',\n",
+       " 'Zapatilla Vans Old Skool   Tie-Dye  Comfycush M...',\n",
+       " 'Zapatilla Vans Sk8 Hi Tapered Gris',\n",
+       " 'Zapatilla  Vans Sk8-Hi  Tapered Rojo']"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista_nombres"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "modular-prediction",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Seleccionamos los nombres de las zapatillas con el selectos css utilizando select\n",
+    "#obtenemos el mismo resultado que con findall\n",
+    "nombres_ = soup.select('div.name_product_box')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "marcas = soup.find_all('span', {'class': 'marca-product-box'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'CONVERSE '"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "marcas[0].getText()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "marcas_ = soup.select('span.marca-product-box')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['CONVERSE', 'REEBOK', 'ADIDAS', 'NIKE', 'NIKE', 'NEW BALANCE', 'NEW BALANCE', 'CONVERSE', 'CONVERSE', 'SKECHERS', 'SKECHERS', 'SKECHERS', 'SKECHERS', 'SKECHERS', 'SKECHERS', 'SKECHERS', 'SKECHERS', 'SKECHERS', 'VANS', 'VANS', 'VANS', 'VANS', 'VANS', 'VANS']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_marcas = [a.getText().strip() for a in marcas]\n",
+    "print(lista_marcas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -451,7 +575,6 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "related-puzzle",
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +657,6 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "prompt-hundred",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -542,7 +664,6 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "celtic-basics",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -550,7 +671,6 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "chicken-sewing",
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +752,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "experimental-program",
    "metadata": {},
    "source": [
     "### Ejemplo wikipedia medallero"
@@ -641,7 +760,6 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "moral-routine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +769,6 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "secure-enlargement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +778,6 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "collectible-bulgarian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +787,6 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "maritime-hypothesis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +796,6 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "convenient-valuation",
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +814,6 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "classical-confirmation",
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +834,6 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "chinese-criminal",
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +851,6 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "angry-somerset",
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +871,6 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "supposed-portable",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +880,6 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "intelligent-breeding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +889,6 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "molecular-tackle",
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +907,6 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "dedicated-avenue",
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +933,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "romantic-edition",
    "metadata": {},
    "source": [
     "### Ejemplo Wikipedia Enlaces"
@@ -835,7 +941,6 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "fabulous-indian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,7 +951,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "missing-jimmy",
    "metadata": {},
    "source": [
     "Documentación de Beautiful Soup     \n",
@@ -856,7 +960,6 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "purple-management",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +970,6 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "short-cradle",
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +1027,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sudden-trademark",
    "metadata": {},
    "outputs": [],
    "source": []
